# database-project

./: .gitignore  README.md  addCustomerWidget.py  autoLoanListWidget.py  customerListWidget.py  database.py  enterInfoDialog.py  enterInfoWidget.py  labels.py  loginDialog.py  loginFormWidget.py  main.py  mortgageListWidget.py  personalLoanListWidget.py  pyproject.toml  searchBarWidget.py  showInfoDialog.py  showInfoWidget.py  studentLoanListWidget.py  test.py
