[project]
name = "cmpsc430-project"
version = "0.1.0"
description = ""
authors = [
    {name = "felix920506",email = "felix920506@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6 (>=6.9.0,<7.0.0)",
    "oracledb (>=3.1.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "cmpsc430_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
